<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout"
    android:background="#d0d4db"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.farmmart.jonas.eazyfarmmart.fragment.HomeFragment">

    <!--<RelativeLayout-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--&gt;-->
        <!--<android.support.v4.view.ViewPager-->
            <!--android:id="@+id/pager"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="200dp"-->
            <!--android:layout_alignParentTop="true" />-->
        <!--<me.relex.circleindicator.CircleIndicator-->
            <!--android:id="@+id/indicator"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="48dp"-->
            <!--android:layout_alignParentBottom="true"/>-->

    <!--</RelativeLayout>-->

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/image_slider"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:auto_cycle="true"
        app:corner_radius="5"
        app:period="1000"
        app:error_image="@drawable/error"
        app:selected_dot="@drawable/default_selected_dot"
        app:unselected_dot="@drawable/default_unselected_dot"
        android:layout_gravity="top|center_horizontal"
        app:delay="1"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp">
        <android.support.v7.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/home_frag_card"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            app:cardUseCompatPadding="true"
            android:background= "@color/white"
            app:cardElevation="7dp"
            app:cardCornerRadius="3dp"
            >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

                 <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                     android:layout_weight="1">

                    <EditText
                        android:id="@+id/delivery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_delivery"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/farmName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/farm_name"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/farm_location"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/farmAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_about"
                android:inputType="textMultiLine"
                android:lines="6"
                android:minLines="4"
                android:gravity="top|left"
                android:maxLines="8"
                android:scrollbars="vertical"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/update_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/btn_update"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:visibility="gone"/>

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="gone"
            android:textSize="15sp" />
    </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>



    <!--<ir.apend.slider.ui.Slider-->
        <!--android:id="@+id/slider"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="200dp"-->
        <!--app:animateIndicators="true"-->
        <!--app:defaultIndicators="circle"-->
        <!--app:indicatorSize="8dp"-->
        <!--app:intervalSecond="5"-->
        <!--app:loopSlides="true" />-->

</android.support.design.widget.CoordinatorLayout>
