<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"

    >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8sp"
        android:text="@string/confirmed_purchase"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/abc_search_url_text_pressed"
        android:textSize="16sp">

    </TextView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="11dp"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:id="@+id/AcLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <!--<TextView-->
            <!--android:id="@+id/acNumbTextView"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/transFrom"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:textColor="@color/primary_grey_400">-->

        <!--</TextView>-->

        <TextView
            android:id="@+id/AccNumTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="start"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/abc_search_url_text_pressed"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/withLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp"
       >



        <TextView
            android:id="@+id/wiAmtTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:textAlignment="center"
            android:layout_gravity="start"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/abc_search_url_text_pressed" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/pasCoLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp"
        >


        <TextView
            android:id="@+id/paCoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:textAlignment="center"
            android:layout_gravity="start"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/abc_search_url_text_pressed" />
    </LinearLayout>


    <!--<LinearLayout-->
        <!--android:id="@+id/padCoLinear"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:orientation="horizontal"-->
        <!--android:padding="5dp"-->
        <!--android:weightSum="100">-->
        <!---->

        <!--<TextView-->
            <!--android:id="@+id/patransTextView"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="10sp"-->
            <!--android:layout_marginRight="10sp"-->
            <!--android:textAlignment="center"-->
            <!--android:layout_gravity="right"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:textColor="@color/abc_search_url_text_pressed" />-->
    <!--</LinearLayout>-->


    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/confirm_ok_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/call"
            android:textColor="@color/colorAccent" />


    </LinearLayout>

</LinearLayout>
